@@ -34,8 +34,9 @@ class BtreeIndexTraitsImpl : public BtreeIndexTraits
 {
   public:
     // Returns the actual key size (including overhead)
-    virtual ham_u16_t get_actual_key_size(ham_u32_t key_size) const {
-      return (NodeLayout::get_actual_key_size(key_size));
+    virtual ham_u16_t get_actual_key_size(ham_u32_t page_size,
+                        ham_u32_t key_size) const {
+      return (NodeLayout::get_actual_key_size(page_size, key_size));
     }
 
     // Compares two keys
